Lab generated at 1594963024307

--- a/src/lab/List of experiments.html
+++ b/src/lab/List of experiments.html
@@ -3,8 +3,8 @@
 <script class="gtm">
 
     var dataLayer = [{
-        'labName': 'Analog Integrated Circuits',
-        'discipline': 'Electronics and Communications Engineering',
+        'labName': 'Analog Electronics',
+        'discipline': 'Electronics and Communication Engineering',
         'college': 'IITR',
         'phase': '3',
     }];
@@ -65,7 +65,7 @@
 		</header>
 		<div class="container-fluid flex-fill d-flex flex-column vlabs-page-main">
 			<div class="row py-4 px-4 breadcrumbs"><a href="http://www.vlab.co.in/broad-area-electronics-and-communications" class="sidebar-a">
-	Electronics and Communications Engineering
+	Electronics and Communication Engineering
 </a></div>
 			<div class="row flex-grow-1 px-4">
 				<div class="nav flex-column col-sm-3 col-lg-2 sidebar"><a href="Introduction.html" class="py-2">Introduction</a>
@@ -75,43 +75,43 @@
 <a href="Course Alignment.html" class="py-2">Course Alignment</a>
 <a href="Feedback.html" class="py-2">Feedback</a></div>
 				<div class="vlabs-page-content col-sm-7 col-lg-10 pr-5 pb-4">
-					<span class="lab-name"><h2 class="text-center">Analog Integrated Circuits</h2></span><!--labname-->
+					<span class="lab-name"><h2 class="text-center">Analog Electronics</h2></span><!--labname-->
 					<div><h3 class="page-name">List of Experiments</h3>
 <div> 
 	<ol>
 		<li>
-			<a href="http://aic-iitr.vlabs.ac.in/analog-integrated-circuits/exp/log-antilog-amplifier">
+			<a href="http://ae-iitr.vlabs.ac.in/analog-electronics/exp/log-antilog-amplifier">
 				Log and antilog amplifiers
 			</a>
 		</li>
 		<li>
-			<a href="http://aic-iitr.vlabs.ac.in/analog-integrated-circuits/exp/voltage-comparator">
+			<a href="http://ae-iitr.vlabs.ac.in/analog-electronics/exp/voltage-comparator">
 				Voltage comparator
 			</a>
 		</li>
 		<li>
-			<a href="http://aic-iitr.vlabs.ac.in/analog-integrated-circuits/exp/wein-bridge-oscillator">
+			<a href="http://ae-iitr.vlabs.ac.in/analog-electronics/exp/wein-bridge-oscillator">
 				Wien bridge oscillator using operational amplifier
 			</a>
 		</li>
 		<li>
-			<a href="http://aic-iitr.vlabs.ac.in/analog-integrated-circuits/exp/voltage-regulator">
+			<a href="http://ae-iitr.vlabs.ac.in/analog-electronics/exp/voltage-regulator">
 				Voltage regulator using operational amplifier to produce output of 12V with maximum load current of 50mA
 			</a>
 		</li>
 		<li>
-			<a href="http://aic-iitr.vlabs.ac.in/analog-integrated-circuits/exp/voltage-current-converter">
+			<a href="http://ae-iitr.vlabs.ac.in/analog-electronics/exp/voltage-current-converter">
 				Voltage to current converters
 			</a>
 		</li>
 		<li>
-			<a href="http://aic-iitr.vlabs.ac.in/analog-integrated-circuits/exp/function-generator">
+			<a href="http://ae-iitr.vlabs.ac.in/analog-electronics/exp/function-generator">
 				Function generator using operational amplifier (sine, triangular &amp; square wave)
 			</a>
 		</li>
 		<li>
-			<a href="http://aic-iitr.vlabs.ac.in/analog-integrated-circuits/exp/astable-monostable-multivibrator">
-				Astable and monostable multiviberator using IC 555
+			<a href="http://ae-iitr.vlabs.ac.in/analog-electronics/exp/astable-monostable-multivibrator">
+				Astable and monostable multivibrator using IC 555
 			</a>
 		</li>
 	</ol>
