--- a/src/lab/Feedback.html
+++ b/src/lab/Feedback.html
@@ -3,8 +3,8 @@
 <script class="gtm">
 
     var dataLayer = [{
-        'labName': 'Analog Integrated Circuits',
-        'discipline': 'Electronics and Communications Engineering',
+        'labName': 'Analog Electronics',
+        'discipline': 'Electronics and Communication Engineering',
         'college': 'IITR',
         'phase': '3',
     }];
@@ -65,7 +65,7 @@
 		</header>
 		<div class="container-fluid flex-fill d-flex flex-column vlabs-page-main">
 			<div class="row py-4 px-4 breadcrumbs"><a href="http://www.vlab.co.in/broad-area-electronics-and-communications" class="sidebar-a">
-	Electronics and Communications Engineering
+	Electronics and Communication Engineering
 </a></div>
 			<div class="row flex-grow-1 px-4">
 				<div class="nav flex-column col-sm-3 col-lg-2 sidebar"><a href="Introduction.html" class="py-2">Introduction</a>
@@ -75,7 +75,7 @@
 <a href="Course Alignment.html" class="py-2">Course Alignment</a>
 <a href="Feedback.html" class="py-2">Feedback</a></div>
 				<div class="vlabs-page-content col-sm-7 col-lg-10 pr-5 pb-4">
-					<span class="lab-name"><h2 class="text-center">Analog Integrated Circuits</h2></span><!--labname-->
+					<span class="lab-name"><h2 class="text-center">Analog Electronics</h2></span><!--labname-->
 					<div><h3 class="page-name">Feedback</h3>
 <p><b>Dear User</b>,</p>
 
